frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-frontend-service
spec:
  selector:
    app: uptime-frontend
  type: ClusterIP     
  ports:
    - port: 80
      targetPort: 80
