frontend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: uptime.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uptime-frontend-service
                port:
                  number: 80
